# finafeed

./: .gitignore  README.md  __init__.py  __main__.py  config.py  config.yaml  main.py  pyproject.toml  requirements.txt  storage.py
collectors/: rest_long_short.py  rest_open_interest.py  ws_liquidation.py
deploy/: README.md  finafeed.service  liquitrack-collector.service
docs/: implementation_plan.md  walkthrough.md
finafeed/: __main__.py  config.py  config.yaml  main.py  storage.py
finafeed/collectors/: __init__.py  rest_long_short.py  rest_open_interest.py  ws_liquidation.py
finafeed/infra/: __init__.py  alerter.py  logger.py  metrics.py  telegram_bot.py
infra/: alerter.py  logger.py  metrics.py
