[project]
name = "liquitrack-collector"
version = "1.0.0"
description = "LiquiTrack 7×24 Binance Futures Data Collection Daemon"
readme = "deploy/README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "colorama>=0.4.6",
    "prometheus-client>=0.25.0",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
]

[tool.uv]
package = false
